--- a/style.css
+++ b/style.css
@@ -5,38 +5,30 @@
 }
 
 body{
-    height: 100vh;
+    height: 90vh;
     width: 100vw;
 }
 
 .container{
-    display: inline-block;
+    display: block;
     width: 50vw;
     height: 60%;
     margin-left: 25vw;
-    margin-top: 10%;
+    margin-top: 10vh;
     text-align: center;    
 }
 
-.image{
-    display: inline-block;
-}
 
-.image img{
+img{
     width: 100%;
+    display: block;
 }
 
-.btn1{
-    width: 40.7vw;
-    margin-left: 4.64vw;
-    height: 22%;
-}
-
-.btn1 input{
-    margin-top: -5px;
-    color: white;
+button{
+    display: block;
+    border: 0.5vh solid black;
     width: 100%;
-    height: 100%;
-    font-size: 30px;
+    height: 13.5vh;
+    font-size: 3vh;
     background-image: linear-gradient(to right, skyblue, black);
 }
